[package]
name = "error_reprod"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "error_reprod"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = { version = "0.25.0", features = ["dex", "token"] }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "~1.10.29"
solana-program-test = "~1.10.29"
solana-logger = "~1.10.29"
spl-associated-token-account = "1.0.3"
arrayref = "0.3.6"
sha2 = "0.10.1"