[package]
name = "orca_lping"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orca_lping"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
whirlpool = { git = "https://github.com/orca-so/whirlpools", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"]}
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "~1.9.18"
solana-program-test = "~1.9.18"
solana-logger = "~1.9.18"
spl-associated-token-account = "1.0.3"
arrayref = "0.3.6"